--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,25 @@
         <h2>Búsquedas</h2>
         <hr/>
         <ul class="list-group">
-            <li class="list-group-item">Por país</li>
-            <li class="list-group-item">Por región</li>
-            <li class="list-group-item">Por capital</li>
+            <li class="list-group-item" 
+                routerLink=""
+                routerLinkActive="active"
+                [routerLinkActiveOptions] = "{ exact: true }"
+                role="button">
+                Por país
+            </li>
+            <li class="list-group-item"
+                routerLink="region"
+                routerLinkActive="active"
+                role="button">
+                Por región
+            </li>
+            <li class="list-group-item" 
+                routerLink="capital"
+                routerLinkActive="active"
+                role="button">
+                Por capital
+            </li>
         </ul>
     </div>
 
