--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,1 +1,20 @@
-<p>sidebar works!</p>
+<h2>Búsquedas</h2>
+<hr/>
+<ul class="list-group">
+    <li class="list-group-item" 
+        routerLink=""
+        routerLinkActive="active"
+        [routerLinkActiveOptions] = "{ exact: true }">
+        Por país
+    </li>
+    <li class="list-group-item"
+        routerLink="region"
+        routerLinkActive="active">
+        Por región
+    </li>
+    <li class="list-group-item" 
+        routerLink="capital"
+        routerLinkActive="active">
+        Por capital
+    </li>
+</ul>
