--- a/src/app/paises/pages/por-pais/por-pais.component.html
+++ b/src/app/paises/pages/por-pais/por-pais.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col">
-        <form autocomplete="off" (ngSubmit)="search()">
+        <form autocomplete="off" (ngSubmit)="search() ">
             <input type="text" 
                 name="termino" 
                 placeholder="Buscar País..." 
@@ -14,11 +14,11 @@
 </div>
 
 <hr>
-<div class="alert alert-danger">
-    No se encontró nada con el término asdfas
+<div class="alert alert-danger" *ngIf="error">
+    No se encontró nada con el término {{ termino }}
 </div>
 
-<div class="row">
+<div class="row" *ngIf="!error">
     <div class="col">
         <table class="table table-hover">
             <thead>
