--- a/src/app/paises/pages/por-pais/por-pais.component.html
+++ b/src/app/paises/pages/por-pais/por-pais.component.html
@@ -24,18 +24,18 @@
             <thead>
                 <tr>
                     <th>#</th>
-                    <th>Bandera</th>
                     <th>Nombre</th>
-                    <th>Población</th>
+                    <th>Capital</th>
+                    <th>Region</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>bandera</td>
-                    <td>nombre</td>
-                    <td>234234234243</td>
+                <tr *ngFor="let item of results">
+                    <td>{{ results.indexOf(item)+1 }}</td>
+                    <td>{{ item.name }}</td>
+                    <td>{{ item.capital }}</td>
+                    <td>{{ item.region }}</td>
                     <td>
                         <a href="">Ver...</a>
                     </td>
