--- a/src/app/paises/pages/por-pais/por-pais.component.html
+++ b/src/app/paises/pages/por-pais/por-pais.component.html
@@ -18,26 +18,30 @@
     No se encontró nada con el término {{ termino }}
 </div>
 
-<div class="row" *ngIf="!error">
+<div class="row" *ngIf="results.length>0">
     <div class="col">
         <table class="table table-hover">
             <thead>
                 <tr>
                     <th>#</th>
                     <th>Nombre</th>
+                    <th>Bandera</th>
                     <th>Capital</th>
-                    <th>Region</th>
+                    <th>Población</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let item of results">
                     <td>{{ results.indexOf(item)+1 }}</td>
-                    <td>{{ item.name }}</td>
+                    <td>{{ item.name.common }}</td>
+                    <td class="small-flag">
+                        {{ item.flag }}
+                    </td>
                     <td>{{ item.capital }}</td>
-                    <td>{{ item.region }}</td>
+                    <td>{{ item.population | number }}</td>
                     <td>
-                        <a href="">Ver...</a>
+                        <a [routerLink]="['pais/', item.idd.root]" routerLinkActive="router-link-active" >Ver...</a>
                     </td>
                 </tr>
             </tbody>
