--- a/src/app/paises/pages/por-pais/por-pais.component.html
+++ b/src/app/paises/pages/por-pais/por-pais.component.html
@@ -3,7 +3,8 @@
 
 <div class="row">
     <app-input (onEnter) = "search( $event )"
-        (onDebounce)="sugerencias( $event )"></app-input>
+        (onDebounce)="sugerencias( $event )"
+        placeholder="Buscar por pais..."></app-input>
 </div>
 
 <hr>
