--- a/src/app/paises/components/table/table.component.html
+++ b/src/app/paises/components/table/table.component.html
@@ -19,7 +19,7 @@
             <td>{{ item.capital }}</td>
             <td>{{ item.population | number }}</td>
             <td>
-                <a [routerLink]="['pais/', item.cca3]" routerLinkActive="router-link-active" >Ver...</a>
+                <a [routerLink]="['/pais/', item.cca3]" routerLinkActive="router-link-active" >Ver...</a>
             </td>
         </tr>
     </tbody>
