--- a/src/app/paises/pages/por-pais/por-pais.component.html
+++ b/src/app/paises/pages/por-pais/por-pais.component.html
@@ -1,10 +1,12 @@
-<h2>Por País</h2>
+<h2>Por país</h2>
 <hr>
 
 <div class="row">
     <app-input (onEnter) = "search( $event )"
         (onDebounce)="sugerencias( $event )"
         placeholder="Buscar por pais..."></app-input>
+
+    
 </div>
 
 <hr>
