--- a/src/app/paises/pages/ver-pais/ver-pais.component.html
+++ b/src/app/paises/pages/ver-pais/ver-pais.component.html
@@ -19,17 +19,17 @@
         <div class="col">
             <h3>Información</h3>
             <ul class="list-group">
-                <li class="list-group-item">
-                    <strong>Población</strong> {{ pais.population | number }}
+                <li class="list-group-item row">
+                    <strong class="col-6 mr-3">Población:</strong> <pre class="col" style="display:inline">{{ pais.population | number }}</pre>
                 </li>
-                <li class="list-group-item">
-                    <strong>Capital</strong> {{ pais.capital }}
+                <li class="list-group-item row">
+                    <strong class="col-6 mr-3">Extensión:</strong> <pre class="col" style="display:inline">{{ pais.area | number }} m2</pre>
                 </li>
-                <li class="list-group-item">
-                    <strong>Región</strong> {{ pais.region }}
+                <li class="list-group-item row">
+                    <strong class="col-6 mr-3">Capital:</strong> <pre class="col" style="display:inline">{{ pais.capital }}</pre>
                 </li>
-                <li class="list-group-item">
-                    <strong>Extensión</strong> {{ pais.area | number }} m2
+                <li class="list-group-item row">
+                    <strong class="col-6 mr-3">Región:</strong> <pre class="col" style="display:inline">{{ pais.region }}</pre>
                 </li>
             </ul>
             <hr>
