--- a/src/app/paises/components/table/table.component.html
+++ b/src/app/paises/components/table/table.component.html
@@ -1,4 +1,4 @@
-<table class="table table-hover">
+<!--<table class="table table-hover">
     <thead>
         <tr>
             <th>#</th>
@@ -19,8 +19,47 @@
             <td>{{ item.capital }}</td>
             <td>{{ item.population | number }}</td>
             <td>
-                <a [routerLink]="['/pais/', item.cca3]" routerLinkActive="router-link-active" >Ver...</a>
+                <button mat-raised-button color="primary" [routerLink]="['/pais/', item.cca3]" routerLinkActive="router-link-active">Ver...</button>
             </td>
         </tr>
     </tbody>
-</table>
+</table>-->
+
+
+<table mat-table [dataSource]="results" class="mat-elevation-z8 demo-table">
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef>No.</th>
+      <td mat-cell *matCellDef="let element">{{ results.indexOf(element)+1 }}</td>
+    </ng-container>
+  
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Nombre</th>
+      <td mat-cell *matCellDef="let element">{{ element.name.common }}</td>
+    </ng-container>
+  
+    <ng-container matColumnDef="flag">
+      <th mat-header-cell *matHeaderCellDef>Bandera</th>
+      <td mat-cell *matCellDef="let element">{{ element.flag }}</td>
+    </ng-container>
+  
+    <ng-container matColumnDef="capital">
+      <th mat-header-cell *matHeaderCellDef>Capital</th>
+      <td mat-cell *matCellDef="let element">{{ element.capital }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="population">
+        <th mat-header-cell *matHeaderCellDef>Población</th>
+        <td mat-cell *matCellDef="let element"> {{ element.population }} </td>
+      </ng-container>
+
+    <ng-container matColumnDef="star" stickyEnd>
+        <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+        <td mat-cell *matCellDef="let element">
+          <mat-icon [routerLink]="['/pais/', element.cca3]" routerLinkActive="router-link-active">crop_free</mat-icon>
+        </td>
+      </ng-container>
+      
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
